# Calibraion_ctool

./: .gitignore  CMakeLists.txt  README.md  version.txt
blender/: addon.blend
cmake/: FindG2O.cmake
lib/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/ui/: main_window.cpp  main_window.h
src/app/ui/dialogs/: CMakeLists.txt  calibration_system_dialog.cpp  calibration_system_dialog.h  file_calibration_dialog.cpp  file_calibration_dialog.h  stream_calibration_dialog.cpp  stream_calibration_dialog.h  undistortion_dialog.cpp
src/app/ui/utils/: CMakeLists.txt  calibration_target_visualization.cpp  files_calibration_runner.cpp  housing_diagram.cpp  housing_diagram.h  livestream_calibration_runner.cpp  system_calibration_runner.cpp  system_calibration_runner.h
src/app/ui/widgets/: CMakeLists.txt  calibration_result_widget.cpp  calibration_system_options_widget.cpp  calibration_system_options_widget.h  calibration_target_widget.cpp  calibration_target_widget.h  camera_model_selector_widget.cpp  camera_model_selector_widget.h  camera_model_widget.cpp  camera_model_widget.h  camera_system_inital_widget.cpp  camera_system_inital_widget.h  camera_system_model_selector_widget.cpp  camera_system_model_selector_widget.h  charuco_board_target_widget.cpp  charuco_board_target_widget.h  common_calibration_options_widget.cpp  common_calibration_options_widget.h  extraction_image_widget.cpp  extraction_image_widget.h  housing_diagram_widget.cpp  initial_parameters_widget.cpp  initial_parameters_widget.h  moc_camera_model_widget.cpp
src/calibmar/: CMakeLists.txt  version.h
src/calibmar/calibrators/: CMakeLists.txt  basic_calibrator.cpp  basic_calibrator.h  g2o_calibration.cpp  g2o_calibration.h  housing_calibrator.cpp  housing_calibrator.h  non_svp_calibration.cpp  opencv_calibration.cpp  opencv_calibration.h
src/calibmar/core/: calibration.cpp  calibration.h  calibration_targets.h  image.h  pixmap.cpp  pixmap.h  report.cpp  report.h
src/calibmar/extractors/: charuco_board_extractor.cpp  charuco_board_extractor.h  multi_charuco_board_extractor.cpp  multi_charuco_board_extractor.h
src/calibmar/readers/: filesystem_reader.cpp  filesystem_reader.h
tests/calibrators/: housing_calibrator_test.cpp
tests/report/: report_test.cpp
